added model and decision making

--- a/vsdk/service_development/templates/animal_selection.xml
+++ b/vsdk/service_development/templates/animal_selection.xml
@@ -1,10 +1,10 @@
 {% extends "base.xml" %}
 {% block content%}
-<form  id="{{ choice.name }}">
+<form  id="{{ selection.name }}">
 	<field name="field1">
 		<prompt>
-			<audio src="{{ choice_voice_label }}"/>
-			{% for option_voice_label in choice_options_voice_labels %}
+			<audio src="{{ selection_voice_label }}"/>
+			{% for option_voice_label in selection_options_voice_labels %}
 				<audio src="{{ language.get_interface_voice_label_url_dict.pre_choice_option }}"/>
 				<audio src="{{ option_voice_label }}"/>
 				<audio src="{{ language.get_interface_voice_label_url_dict.post_choice_option }}"/>
@@ -16,7 +16,7 @@
 <grammar xml:lang="en-US" root = "MYRULE" mode="dtmf">
       <rule id="MYRULE" scope = "public">
         <one-of>
-          {% for option in choice_options %}
+          {% for option in selection_options %}
             <item>{{ forloop.counter }}</item>
           {% endfor %}
         </one-of>
@@ -25,21 +25,21 @@
 
 {# when there has been input, redirect the user to the corresponding URL #}
 <filled>
-    {% for option_redirect in choice_options_redirect_urls %}
+    {% for selection_option in selection_options_redirect_urls %}
+      
       {% if forloop.counter == 1 %}
       <if cond="field1 == '{{ forloop.counter }}'">
-	       <assign name="answer_" expr="'{{ forloop.counter }}'"/>
+	      <assign name="animal_id" expr="'{{ selection_option.0 }}'"/>
       {% else %}
       <elseif cond="field1 == '{{ forloop.counter }}'" />
-         <assign name="answer_" expr="'{{ forloop.counter }}'"/>
+	      <assign name="animal_id" expr="'{{ selection_option.0 }}'"/>
       {% endif %}
-      <assign name="curr_element_id" expr="'{{ current_element_id }}'"/>
-      <submit next="{{ option_redirect }}" method="post" namelist="answer_ curr_element_id"/>
+      <submit next="{{ selection_option.1 }}" method="post" namelist="animal_id"/>
     {% endfor %}
     <else/>
     </if>
-  </filled>
-
+  
+   </filled>
 </field>
 </form>
 
