--- a/vsdk/service_development/templates/region_selection.xml
+++ b/vsdk/service_development/templates/region_selection.xml
@@ -1,10 +1,10 @@
 {% extends "base.xml" %}
 {% block content%}
-<form  id="{{ choice.name }}">
+<form  id="{{ selection.name }}">
 	<field name="field1">
 		<prompt>
-			<audio src="{{ choice_voice_label }}"/>
-			{% for option_voice_label in choice_options_voice_labels %}
+			<audio src="{{ selection_voice_label }}"/>
+			{% for option_voice_label in selection_options_voice_labels %}
 				<audio src="{{ language.get_interface_voice_label_url_dict.pre_choice_option }}"/>
 				<audio src="{{ option_voice_label }}"/>
 				<audio src="{{ language.get_interface_voice_label_url_dict.post_choice_option }}"/>
@@ -16,7 +16,7 @@
 <grammar xml:lang="en-US" root = "MYRULE" mode="dtmf">
       <rule id="MYRULE" scope = "public">
         <one-of>
-          {% for option in choice_options %}
+          {% for option in selection_options %}
             <item>{{ forloop.counter }}</item>
           {% endfor %}
         </one-of>
@@ -25,22 +25,32 @@
 
 {# when there has been input, redirect the user to the corresponding URL #}
 <filled>
-    {% for option_redirect in choice_options_redirect_urls %}
+    {% for selection_option in selection_options %}
       {% if forloop.counter == 1 %}
       <if cond="field1 == '{{ forloop.counter }}'">
-	       <assign name="answer_" expr="'{{ forloop.counter }}'"/>
+	      <assign name="region_id" expr="'{{ selection_option.options_id }}'"/>
       {% else %}
       <elseif cond="field1 == '{{ forloop.counter }}'" />
-         <assign name="answer_" expr="'{{ forloop.counter }}'"/>
+	      <assign name="region_id" expr="'{{ selection_option.options_id }}'"/>
       {% endif %}
-      <assign name="curr_element_id" expr="'{{ current_element_id }}'"/>
-      <submit next="{{ option_redirect }}" method="post" namelist="answer_ curr_element_id"/>
     {% endfor %}
     <else/>
     </if>
+    
+    <goto next="#submit_form"/>
+    
   </filled>
-
 </field>
 </form>
 
+
+<form id="submit_form">
+<block>
+	{# include the variables in the dictionary 'pass_on_variables' as POST variables #}
+	{% for key, value in pass_on_variables.items %}
+	<assign name="{{ key }}" expr="'{{ value }}'"/>
+	{% endfor %}
+	<submit next="{{ redirect_url }}" method="post" namelist="region_id {% for key, value in pass_on_variables.items %} {{ key }} {% endfor %}"/>
+</block>
+</form>
 {% endblock %}
