--- a/vsdk/service_development/templates/region_selection.xml
+++ b/vsdk/service_development/templates/region_selection.xml
@@ -1,7 +1,64 @@
 {% extends "base.xml" %}
 {% block content%}
-<form  id="{{ selection.name }}">
-	<field name="field1">
+
+{% if region_voice_label != '' %}
+<form id="validate_region_form">
+	<field name="validate_region_field">
+		<prompt>
+      <audio src="{{ language.get_interface_voice_label_url_dict.validate_region_message }}"/>
+      <audio src="{{ region_voice_label }}"/>
+      
+      {% for option in validate_options %}
+        <audio src="{{ language.get_interface_voice_label_url_dict.pre_choice_option }}"/>
+        {% if option == 'yes' %}
+          <audio src="{{ language.get_interface_voice_label_url_dict.yes }}"/>
+        {% else %}
+          <audio src="{{ language.get_interface_voice_label_url_dict.no }}"/>
+        {% endif %}  
+        <audio src="{{ language.get_interface_voice_label_url_dict.post_choice_option }}"/>
+        {% for number in language.get_interface_numbers_voice_label_url_list %}{% if forloop.counter0 == forloop.parentloop.counter %}<audio src="{{ number }}"/>{% endif %}{% endfor %}
+			{% endfor %}
+</prompt>
+
+{# all possible inputs from the user #}
+<grammar xml:lang="en-US" root = "MYRULE" mode="dtmf">
+      <rule id="MYRULE" scope = "public">
+       <one-of>
+              {% for option in validate_options %}
+                <item>{{ forloop.counter }}</item>
+              {% endfor %}
+            </one-of>
+       </rule>
+</grammar>
+
+{# when there has been input, redirect the user to the corresponding URL #}
+<filled>
+    {% for selection_option in validate_options %}
+      {% if forloop.counter == 1 %}
+      <if cond="validate_region_field == '{{ forloop.counter }}'">
+        <assign name="region_id" expr="'{{ region_id }}'"/>
+	      <goto next="#submit_form"/>
+      {% else %}
+      <elseif cond="validate_region_field == '{{ forloop.counter }}'" />
+	      <goto next="#region_selection_form"/>
+      {% endif %}
+    {% endfor %}
+      <else/>
+      </if>
+  </filled>
+</field>
+</form>
+
+{% else %}
+<form>
+  <block>
+    <goto next="#region_selection_form"/>
+  </block>
+</form>
+{% endif %}
+
+<form  id="region_selection_form">
+	<field name="region_selection_field">
 		<prompt>
 			<audio src="{{ selection_voice_label }}"/>
 			{% for option_voice_label in selection_options_voice_labels %}
@@ -10,37 +67,37 @@
 				<audio src="{{ language.get_interface_voice_label_url_dict.post_choice_option }}"/>
 			{% for number in language.get_interface_numbers_voice_label_url_list %}{% if forloop.counter0 == forloop.parentloop.counter %}<audio src="{{ number }}"/>{% endif %}{% endfor %}
 			{% endfor %}
-</prompt>
+    </prompt>
 
-{# all possible inputs from the user #}
-<grammar xml:lang="en-US" root = "MYRULE" mode="dtmf">
-      <rule id="MYRULE" scope = "public">
-        <one-of>
-          {% for option in selection_options %}
-            <item>{{ forloop.counter }}</item>
-          {% endfor %}
-        </one-of>
-       </rule>
-</grammar>
+    {# all possible inputs from the user #}
+    <grammar xml:lang="en-US" root = "MYRULE" mode="dtmf">
+          <rule id="MYRULE" scope = "public">
+            <one-of>
+              {% for option in selection_options %}
+                <item>{{ forloop.counter }}</item>
+              {% endfor %}
+            </one-of>
+          </rule>
+    </grammar>
 
-{# when there has been input, redirect the user to the corresponding URL #}
-<filled>
-    {% for selection_option in selection_options %}
-      {% if forloop.counter == 1 %}
-      <if cond="field1 == '{{ forloop.counter }}'">
-	      <assign name="region_id" expr="'{{ selection_option.options_id }}'"/>
-      {% else %}
-      <elseif cond="field1 == '{{ forloop.counter }}'" />
-	      <assign name="region_id" expr="'{{ selection_option.options_id }}'"/>
-      {% endif %}
-    {% endfor %}
-    <else/>
-    </if>
-    
-    <goto next="#submit_form"/>
-    
-  </filled>
-</field>
+    {# when there has been input, redirect the user to the corresponding URL #}
+    <filled>
+        {% for selection_option in selection_options %}
+          {% if forloop.counter == 1 %}
+          <if cond="region_selection_field == '{{ forloop.counter }}'">
+            <assign name="region_id" expr="'{{ selection_option.options_id }}'"/>
+          {% else %}
+          <elseif cond="region_selection_field == '{{ forloop.counter }}'" />
+            <assign name="region_id" expr="'{{ selection_option.options_id }}'"/>
+          {% endif %}
+        {% endfor %}
+        <else/>
+        </if>
+        
+        <goto next="#submit_form"/>
+        
+    </filled>
+  </field>
 </form>
 
 
