--- a/vsdk/service_development/templates/user_registration.xml
+++ b/vsdk/service_development/templates/user_registration.xml
@@ -3,7 +3,7 @@
 <form id="language_form">
 	<field name="language_field">
 		<prompt>
-      <audio src="/uploads/jingle.wav"/>
+      <audio src="{{ jingle_url }}"/>
 			{% for language in languages %}
       <audio src="{{ language.get_interface_voice_label_url_dict.select_language }}"/>
 			<audio src="{{ language.get_interface_voice_label_url_dict.pre_choice_option }}"/>
